# Sanpra-Easypay

./: README.md  bulk_pay.py  decryption.py  java_decryption.py  pub_key.pem  pyproject.toml  server.p12
.github/workflows/: ci.yml
hybrid/: Enc.java
sanpra_easypay/: hooks.py  modules.txt
sanpra_easypay/public/js/: custom_payment_entry.js
sanpra_easypay/sanpra_easypay/: encryption.py  encryption1.py  pri_key.pem  reverse.py  server.crt
sanpra_easypay/sanpra_easypay/custom/: advance_taxes_and_charges.json  payment_entry.json  payment_entry_deduction.json  payment_schedule.json  purchase_invoice.json  purchase_invoice_item.json  purchase_taxes_and_charges.json
sanpra_easypay/sanpra_easypay/doctype/api_setting/: api_setting.js  api_setting.json  api_setting.py  test_api_setting.py
sanpra_easypay/sanpra_easypay/doctype/bulk_payment_api_log_details/: bulk_payment_api_log_details.json  bulk_payment_api_log_details.py
sanpra_easypay/sanpra_easypay/doctype/child_supplier/: child_supplier.json  child_supplier.py
sanpra_easypay/sanpra_easypay/doctype/easypay_setting/: easypay_setting.js  easypay_setting.json  easypay_setting.py  test_easypay_setting.py
sanpra_easypay/sanpra_easypay/doctype/otp_api_log_details/: otp_api_log_details.json  otp_api_log_details.py
sanpra_easypay/sanpra_easypay/doctype/payment_entry_details/: payment_entry_details.json  payment_entry_details.py
sanpra_easypay/sanpra_easypay/doctype/payment_status_api_log_details/: payment_status_api_log_details.json  payment_status_api_log_details.py
(+21 files in other folders)
